--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Fe's Unplugged Retreat Website</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,8 +24,95 @@
 
 <body>
 
+<header>
+      <div class="content-wrapper">
+        <a href="#"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+        <div class="header-divider"></div>
+
+        <nav>
+          <ul>
+             <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+             <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+          </ul>
+        </nav>
+      </div>
+</header>
+
+<main>
+
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+    </aside>
+
+    <div class="body-section">
+      <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="image-icon">
+          <p>Located in a peaceful bungalow ooutside the Lake Geneva, Wisconsin.</p>
+          <p>12 Private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+          <p>5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          <p>Dedicated computer room for times that you must wifi.</p>
+        </div>
+        <div class="group-photo">
+          <h2>Be a better team in 5 days, like these.</h2>
+          <img src="img/group-photo.png" alt="Group Photo"></a>
+          <h3>LaCrue Bottling Co.<br>October 2017</h3>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+    </div>
+
+</main>
+
+<footer>
+    <div class="content-wrapper">
+        <div class="footer-content">
+            <div class="contact">
+              <h3>Contact</h3>
+                <address>
+                  <p>555-555-5555
+                    <br>hello@unplugged.com</p>
+                </address>
+
+            <div class="social">
+              <h3>Social</h3>
+                <div class="social-icons">
+                  <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+                  <a href="https://www.twitter.com/yoursite" target="_blank"></a>
+                  <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                </div>
+              </div>
+
+            </div>
+        </div> <!-- footer content ends -->
+    </div> <!--footer content-wrapper ends-->
+
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+
+</footer>
+
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
