--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
           <ul>
              <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-             <li><a href="about/index.html" target="_blank">ABOUT</a></li>
+             <li><a href="about/index.html" target="_blank">About</a></li>
           </ul>
         </nav>
       </div>
@@ -60,20 +60,35 @@
         </div>
     </aside>
 
-    <div class="body-section">
-      <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-        <div class="image-icon">
-          <p>Located in a peaceful bungalow ooutside the Lake Geneva, Wisconsin.</p>
-          <p>12 Private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-          <p>Private chef team providing on demand meals - just like your team kitchen.</p>
-          <p>5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
-          <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-          <p>Dedicated computer room for times that you must wifi.</p>
-        </div>
-        <div class="group-photo">
+    <div class="features">
+      <div class="content-wrapper">
+          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+      <article>
+          <p class="feature-items"></p>
+          <p class="features-item-description">Located in a peaceful bungalow ooutside the Lake Geneva, Wisconsin.</p>
+
+          <p class="feature-items"></p>
+          <p class="features-item-description">12 Private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+
+          <p class="feature-items"></p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+
+          <p class="feature-items"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+
+          <p class="feature-items"></p>
+          <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+
+          <p class="feature-items"></p>
+          <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+        </article>
+      </div>
+
+        <div class="reviews">
+          <div class="content-wrapper">
           <h2>Be a better team in 5 days, like these.</h2>
           <img src="img/group-photo.png" alt="Group Photo"></a>
-          <h3>LaCrue Bottling Co.<br>October 2017</h3>
+          <h3>LaCrue Bottling Co. October 2018</h3>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
