--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Fe's Unplugged Retreat Website</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,10 +22,73 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<header>
+      <div class="content-wrapper">
+        <a href="#"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+        <div class="header-divider"></div>
+
+        <nav>
+          <ul>
+             <li><a href="index.html" target="_blank">Homepage</a></li>
+             <li><a href="/about/index.html" target="_blank">About</a></li>
+             <li><a href="/faq/index.html" target="_blank">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
+</header>
+
+<main>
+
+  <section class="mission">
+    <div class="content-wrapper">
+        <div class="mission-content">
+          <h2>Our mission - we want to make you the team you always wanted to be.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+            maccenas accumsan lacus vel facilisis.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+              maccenas accumsan lacus vel facilisis.</p>
+        </div>
+      </div>
+
+      <div class="map">
+        <figure>
+        </figure>
+      </div>
+  </section>
+
+  <aside>
+  </aside>
+
+</main>
+
+<footer>
+    <div class="content-wrapper">
+        <div class="footer-content">
+            <div class="contact">
+              <h2>Contact us, because you all need this.</h2>
+              <h3>General Information</h3>
+                <address>
+                  <p>333 Main St. Lake Geneva, Wi, 5147<br>
+                    555-555-5555<br>hello@unplugged.com</p>
+
+                <h3>Chat with a Facilitator</h3>
+                <p>555-555-5555<br>facilitator@unplugged.com</p>
+
+                <h3>Contact</h3>
+                <p>555-555-5555<br>hello@unplugged.com</p>
+                </address>
+              </div>
+            </div>
+          </div>
+
+        <div class="copyright">
+      <p>Copyright 2018 | Unplugged</p>
+    </div>
+
+  <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
