Added faq content and adjust width

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
           <ul>
              <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-             <li><a href="about/index.html" target="_blank">About</a></li>
+             <li><a href="about/index.html" target="_blank">ABOUT</a></li>
           </ul>
         </nav>
       </div>
@@ -55,14 +55,14 @@
 
         <div class="form">
           <h3>Find out more</h3>
-          <input type="text" name="name" value="email address">
-          <input type="button" value="Download Itinerary">
+          <input class="etext" type="text" name="name" value="name@email.com">
+          <input type="button" value="DOWNLOAD ITINERARY">
         </div>
     </aside>
 
     <div class="features">
       <div class="content-wrapper">
-          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+          <h2>Have the work week you always<br> dreamed of - <br> without the bad wifi.</h2>
       <article>
           <p class="feature-items"></p>
           <p class="features-item-description">Located in a peaceful bungalow ooutside the Lake Geneva, Wisconsin.</p>
@@ -87,7 +87,7 @@
         <div class="reviews">
           <div class="content-wrapper">
           <h2>Be a better team in 5 days, like these.</h2>
-          <img src="img/group-photo.png" alt="Group Photo"></a>
+          <img src="img/group-photo.jpg" alt="Group Photo"></a>
           <h3>LaCrue Bottling Co. October 2018</h3>
           <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -117,13 +117,14 @@
                 </div>
               </div>
 
+            <div class="copyright">
+                <p>Copyright 2018 | Unplugged</p>
             </div>
+          </div>
         </div> <!-- footer content ends -->
     </div> <!--footer content-wrapper ends-->
 
-    <div class="copyright">
-      <p>Copyright 2019 | Unplugged</p>
-    </div>
+
 
 </footer>
 
