--- a/faq/index.html
+++ b/faq/index.html
@@ -24,14 +24,13 @@
 
 <header>
       <div class="content-wrapper">
-        <a href="#"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+        <a href="../index.html"><img src="../img/unplugged-logo.png" alt="unplugged logo"></a>
         <div class="header-divider"></div>
 
         <nav>
           <ul>
-             <li><a href="index.html" target="_blank">Homepage</a></li>
-             <li><a href="/about/index.html" target="_blank">About</a></li>
-             <li><a href="/faq/index.html" target="_blank">FAQ</a></li>
+             <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+             <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
           </ul>
         </nav>
       </div>
@@ -42,23 +41,28 @@
   <section class="mission">
     <div class="content-wrapper">
         <div class="mission-content">
-          <h2>Our mission - we want to make you the team you always wanted to be.</h2>
+          <h2>Frequently Asked Questions</h2>
+          <h3>How do I get to the unplugged retreat?</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
-            maccenas accumsan lacus vel facilisis.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
-              maccenas accumsan lacus vel facilisis.</p>
+            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+            <br>
+            <br>
+          <h3>What kind of team is right for the unplugged retreat?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+            <br>
+            <br>
+          <h3>What size teams can you accommodate?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua.</p>
+            <br>
+            <br>
+          <h3>Is there really no wifi available?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
         </div>
-      </div>
-
-      <div class="map">
-        <figure>
-        </figure>
-      </div>
+    </div>
   </section>
-
-  <aside>
-  </aside>
 
 </main>
 
@@ -66,26 +70,28 @@
     <div class="content-wrapper">
         <div class="footer-content">
             <div class="contact">
-              <h2>Contact us, because you all need this.</h2>
-              <h3>General Information</h3>
+              <h3>Contact</h3>
                 <address>
-                  <p>333 Main St. Lake Geneva, Wi, 5147<br>
-                    555-555-5555<br>hello@unplugged.com</p>
-
-                <h3>Chat with a Facilitator</h3>
-                <p>555-555-5555<br>facilitator@unplugged.com</p>
-
-                <h3>Contact</h3>
-                <p>555-555-5555<br>hello@unplugged.com</p>
+                  <p>555-555-5555
+                    <br>hello@unplugged.com</p>
                 </address>
+
+            <div class="social">
+              <h3>Social</h3>
+                <div class="social-icons">
+                  <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+                  <a href="https://www.twitter.com/yoursite" target="_blank"></a>
+                  <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                </div>
               </div>
+
+            <div class="copyright">
+                <p>Copyright 2018 | Unplugged</p>
             </div>
           </div>
-
-        <div class="copyright">
-      <p>Copyright 2018 | Unplugged</p>
-    </div>
-
+        </div> <!-- footer content ends -->
+    </div> <!--footer content-wrapper ends-->
+</footer>
   <body>
 
   <!-- Add your site or application content here -->
