Added about content and adjust width for mobile

--- a/about/index.html
+++ b/about/index.html
@@ -24,13 +24,13 @@
 
 <header>
       <div class="content-wrapper">
-        <a href="#"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+        <a href="../index.html"><img src="../img/unplugged-logo.png" alt="unplugged logo"></a>
         <div class="header-divider"></div>
 
         <nav>
           <ul>
-             <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-             <li><a href="about/index.html" target="_blank">About</a></li>
+             <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+             <li><a href="../about/index.html" target="_blank">ABOUT</a></li>
           </ul>
         </nav>
       </div>
@@ -59,12 +59,9 @@
   <aside>
   </aside>
 
-</main>
-
-<footer>
-    <div class="content-wrapper">
-        <div class="footer-content">
-            <div class="contact">
+    <div class="about-content-wrapper">
+        <div class="about-footer-content">
+            <div class="about-contact">
               <h2>Contact us, because you all need this.</h2>
               <h3>General Information</h3>
                 <address>
@@ -74,18 +71,34 @@
                 <h3>Chat with a Facilitator</h3>
                 <p>555-555-5555<br>facilitator@unplugged.com</p>
 
-                <h3>Contact</h3>
-                <p>555-555-5555<br>hello@unplugged.com</p>
-                </address>
-              </div>
-            </div>
-          </div>
+</main>
 
-    <div class="copyright">
-      <p>Copyright 2018 | Unplugged</p>
-    </div>
+      <footer>
+          <div class="content-wrapper">
+              <div class="footer-content">
+                    <div class="contact">
+                        <h3>Contact</h3>
+                        <address>
+                        <p>555-555-5555
+                        <br>hello@unplugged.com</p>
+                        </address>
 
-</footer>
+                    <div class="social">
+                        <h3>Social</h3>
+                        <div class="social-icons">
+                          <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+                          <a href="https://www.twitter.com/yoursite" target="_blank"></a>
+                          <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                        </div>
+                      </div>
+
+                    <div class="copyright">
+                        <p>Copyright 2018 | Unplugged</p>
+                        </div>
+                      </div>
+                    </div> <!-- footer content ends -->
+                  </div> <!--footer content-wrapper ends-->
+                </footer>
 
 <!-- Add your site or application content here -->
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
