Make changes to my section divs

--- a/index.html
+++ b/index.html
@@ -60,71 +60,87 @@
         </div>
     </aside>
 
-    <div class="features">
+    <section class="features">
       <div class="content-wrapper">
-          <h2>Have the work week you always<br> dreamed of - <br> without the bad wifi.</h2>
+          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+      <div class="feature-items">
       <article>
-          <p class="feature-items"></p>
-          <p class="features-item-description">Located in a peaceful bungalow ooutside the Lake Geneva, Wisconsin.</p>
-
-          <p class="feature-items"></p>
+          <p class="fontawesome-icon">
+          <i class="image-icon"></i></p>
+          <p class="features-item-description">Located in a peaceful bungalow outside the Lake Geneva, Wisconsin.</p>
+        </article>
+        <article>
+          <p class="fontawesome-icon">
+          <i class="image-icon"></i></p>
           <p class="features-item-description">12 Private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-
-          <p class="feature-items"></p>
+        </article>
+        <article>
+          <p class="fontawesome-icon">
+            <i class="image-icon"></i></p>
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-
-          <p class="feature-items"></p>
+        </article>
+        <article>
+          <p class="fontawesome-icon">
+          <i class="image-icon"></i></p>
           <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
-
-          <p class="feature-items"></p>
+        </article>
+        <article>
+          <p class="fontawesome-icon">
+          <i class="image-icon"></i></p>
           <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-
-          <p class="feature-items"></p>
+        </article>
+        <article>
+          <p class="fontawesome-icon">
+          <i class="image-icon"></i></p>
           <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
       </div>
+    </div>
+  </section>
 
-        <div class="reviews">
-          <div class="content-wrapper">
-          <h2>Be a better team in 5 days, like these.</h2>
-          <img src="img/group-photo.jpg" alt="Group Photo"></a>
-          <h3>LaCrue Bottling Co. October 2018</h3>
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      <section class="reviews">
+        <div class="content-wrapper">
+            <h2>Be a better team in 5 days, like these.</h2>
+          <article>
+            <img src="img/group-photo.jpg" alt="Group Photo"></a>
+          <div>
+            <h3>LaCrue Bottling Co. October 2018</h3>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+          </article>
         </div>
-    </div>
+      </section>
 
 </main>
 
 <footer>
     <div class="content-wrapper">
         <div class="footer-content">
-            <div class="contact">
-              <h3>Contact</h3>
-                <address>
+            <address class="contact">
+              <h4>Contact</h4>
                   <p>555-555-5555
-                    <br>hello@unplugged.com</p>
-                </address>
+                  hello@unplugged.com</p>
+            </address>
 
             <div class="social">
-              <h3>Social</h3>
+              <h4>Social</h4>
                 <div class="social-icons">
+                  <p>
                   <a href="https://www.facebook.com/yoursite" target="_blank"></a>
                   <a href="https://www.twitter.com/yoursite" target="_blank"></a>
                   <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                  </p>
                 </div>
-              </div>
+            </div>
+          </div> <!--end of footer-content-->
+      </div> <!--end of footer-content-wrapper-->
 
             <div class="copyright">
                 <p>Copyright 2018 | Unplugged</p>
             </div>
-          </div>
-        </div> <!-- footer content ends -->
-    </div> <!--footer content-wrapper ends-->
-
-
 
 </footer>
 
