--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="features">
       <div class="content-wrapper">
           <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-      <div class="feature-items">
+      <div class="features-feature-items">
       <article>
           <p class="fontawesome-icon">
           <i class="image-icon"></i></p>
@@ -103,7 +103,7 @@
             <h2>Be a better team in 5 days, like these.</h2>
           <article>
             <img src="img/group-photo.jpg" alt="Group Photo"></a>
-          <div>
+          <div class="mission">
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -128,11 +128,9 @@
             <div class="social">
               <h4>Social</h4>
                 <div class="social-icons">
-                  <p>
                   <a href="https://www.facebook.com/yoursite" target="_blank"></a>
                   <a href="https://www.twitter.com/yoursite" target="_blank"></a>
                   <a href="https://www.instagram.com/yoursite" target="_blank"></a>
-                  </p>
                 </div>
             </div>
           </div> <!--end of footer-content-->
