Edited faq page

--- a/faq/index.html
+++ b/faq/index.html
@@ -36,62 +36,59 @@
       </div>
 </header>
 
-<main>
-
-  <section class="mission">
+  <main class="faq">
     <div class="content-wrapper">
-        <div class="mission-content">
           <h2>Frequently Asked Questions</h2>
-          <h3>How do I get to the unplugged retreat?</h3>
+        <div class="faq-content">
+          <h4>How do I get to the unplugged retreat?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-            <br>
-            <br>
-          <h3>What kind of team is right for the unplugged retreat?</h3>
+          </div>
+          <div class="faq-content">
+          <h4>What kind of team is right for the unplugged retreat?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-            <br>
-            <br>
-          <h3>What size teams can you accommodate?</h3>
+          </div>
+          <div class="faq-content">
+          <h4>What size teams can you accommodate?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua.</p>
-            <br>
-            <br>
-          <h3>Is there really no wifi available?</h3>
+          </div>
+          <div class="faq-content">
+          <h4>Is there really no wifi available?</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
         </div>
-    </div>
-  </section>
+    </div> <!--faq content wrapper ends here-->
 
-</main>
+</main> <!--main class ends here -->
 
-<footer>
+  <footer>
     <div class="content-wrapper">
         <div class="footer-content">
-            <div class="contact">
-              <h3>Contact</h3>
-                <address>
+            <address class="contact">
+              <h4>Contact</h4>
                   <p>555-555-5555
-                    <br>hello@unplugged.com</p>
-                </address>
+                  hello@unplugged.com</p>
+            </address>
 
             <div class="social">
-              <h3>Social</h3>
+              <h4>Social</h4>
                 <div class="social-icons">
                   <a href="https://www.facebook.com/yoursite" target="_blank"></a>
                   <a href="https://www.twitter.com/yoursite" target="_blank"></a>
                   <a href="https://www.instagram.com/yoursite" target="_blank"></a>
                 </div>
-              </div>
-
-            <div class="copyright">
-                <p>Copyright 2018 | Unplugged</p>
             </div>
+          </div> <!--end of footer-content-->
+      </div> <!--end of footer-content-wrapper-->
+
+          <div class="copyright">
+            <p>Copyright 2018 | Unplugged</p>
           </div>
-        </div> <!-- footer content ends -->
-    </div> <!--footer content-wrapper ends-->
-</footer>
+
+    </footer>
+
   <body>
 
   <!-- Add your site or application content here -->
