Edited About Page

--- a/about/index.html
+++ b/about/index.html
@@ -40,11 +40,12 @@
 
   <section class="mission">
     <div class="content-wrapper">
+      <h2>Our mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-          <h2>Our mission - we want to make you the team you always wanted to be.</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
             labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
-            maccenas accumsan lacus vel facilisis.<br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            maccenas accumsan lacus vel facilisis.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
               maccenas accumsan lacus vel facilisis.</p>
         </div>
@@ -56,49 +57,51 @@
       </div>
   </section>
 
-  <aside>
-  </aside>
-
-    <div class="about-content-wrapper">
-        <div class="about-footer-content">
-            <div class="about-contact">
-              <h2>Contact us, because you all need this.</h2>
-              <h3>General Information</h3>
-                <address>
+    <section class="contact-section">
+        <div class="content-wrapper">
+            <h2>Contact us, because you all need this.</h2>
+            <div class="contact-content">
+              <div>
+                <h3>General Information</h3>
+              <address>
                   <p>333 Main St. Lake Geneva, Wi, 5147<br>
                     555-555-5555<br>hello@unplugged.com</p>
-
+              </div>
+              <div>
                 <h3>Chat with a Facilitator</h3>
                 <p>555-555-5555<br>facilitator@unplugged.com</p>
+              </div>
+              </address>
+            </div>
+      </section>
 
 </main>
 
-      <footer>
-          <div class="content-wrapper">
-              <div class="footer-content">
-                    <div class="contact">
-                        <h3>Contact</h3>
-                        <address>
-                        <p>555-555-5555
-                        <br>hello@unplugged.com</p>
-                        </address>
+  <footer>
+      <div class="content-wrapper">
+          <div class="footer-content">
+            <address class="contact">
+              <h4>Contact</h4>
+                  <p>555-555-5555
+                  hello@unplugged.com</p>
+            </address>
 
-                    <div class="social">
-                        <h3>Social</h3>
-                        <div class="social-icons">
-                          <a href="https://www.facebook.com/yoursite" target="_blank"></a>
-                          <a href="https://www.twitter.com/yoursite" target="_blank"></a>
-                          <a href="https://www.instagram.com/yoursite" target="_blank"></a>
-                        </div>
-                      </div>
+            <div class="social">
+              <h4>Social</h4>
+                <div class="social-icons">
+                  <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+                  <a href="https://www.twitter.com/yoursite" target="_blank"></a>
+                  <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                </div>
+            </div>
+          </div> <!--end of footer-content-->
+      </div> <!--end of footer-content-wrapper-->
 
-                    <div class="copyright">
-                        <p>Copyright 2018 | Unplugged</p>
-                        </div>
-                      </div>
-                    </div> <!-- footer content ends -->
-                  </div> <!--footer content-wrapper ends-->
-                </footer>
+          <div class="copyright">
+              <p>Copyright 2018 | Unplugged</p>
+          </div>
+
+    </footer>
 
 <!-- Add your site or application content here -->
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
