--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -26,7 +27,9 @@
 
 <header>
       <div class="content-wrapper">
-        <a href="#"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+        <figure>
+          <a href="#"><img src="img/unplugged-logo.png" alt="unplugged logo"></a>
+        </figure>
         <div class="header-divider"></div>
 
         <nav>
@@ -102,7 +105,9 @@
         <div class="content-wrapper">
             <h2>Be a better team in 5 days, like these.</h2>
           <article>
+            <figure>
             <img src="img/group-photo.jpg" alt="Group Photo"></a>
+          </figure>
           <div class="mission">
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
