Added embed iframe to about index file

--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,8 @@
   <link rel="manifest" href="../site.webmanifest">
   <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
@@ -24,7 +25,9 @@
 
 <header>
       <div class="content-wrapper">
-        <a href="../index.html"><img src="../img/unplugged-logo.png" alt="unplugged logo"></a>
+        <figure>
+          <a href="#"><img src="../img/unplugged-logo.png" alt="unplugged logo"></a>
+        </figure>
         <div class="header-divider"></div>
 
         <nav>
@@ -53,6 +56,7 @@
 
       <div class="map">
         <figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11748.47485995141!2d-88.43330393684334!3d42.59522470600629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbef1e33f19%3A0xa9e28adaef1aa0be!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1616641267384!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </figure>
       </div>
   </section>
@@ -61,13 +65,13 @@
         <div class="content-wrapper">
             <h2>Contact us, because you all need this.</h2>
             <div class="contact-content">
-              <div>
+              <div class="contact-one">
                 <h3>General Information</h3>
               <address>
                   <p>333 Main St. Lake Geneva, Wi, 5147<br>
                     555-555-5555<br>hello@unplugged.com</p>
               </div>
-              <div>
+              <div class="contact-two">
                 <h3>Chat with a Facilitator</h3>
                 <p>555-555-5555<br>facilitator@unplugged.com</p>
               </div>
