Modified Changes Added

--- a/faq/index.html
+++ b/faq/index.html
@@ -15,16 +15,21 @@
   <link rel="manifest" href="../site.webmanifest">
   <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
-
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <!--place font-awesome link here-->
+  <script src="https://kit.fontawesome.com/ecf0052709.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <header>
       <div class="content-wrapper">
-        <a href="../index.html"><img src="../img/unplugged-logo.png" alt="unplugged logo"></a>
+        <figure>
+          <a href="#"><img src="../img/unplugged-logo.png" alt="unplugged logo"></a>
+        </figure>
         <div class="header-divider"></div>
 
         <nav>
@@ -75,9 +80,15 @@
             <div class="social">
               <h4>Social</h4>
                 <div class="social-icons">
-                  <a href="https://www.facebook.com/yoursite" target="_blank"></a>
-                  <a href="https://www.twitter.com/yoursite" target="_blank"></a>
-                  <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                  <p>
+                    <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                  </p>
+                  <p>
+                      <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-twitter"></i></a>
+                  </p>
+                  <p>
+                      <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  </p>
                 </div>
             </div>
           </div> <!--end of footer-content-->
