--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <!--place font-awesome link here-->
+  <script src="https://kit.fontawesome.com/ecf0052709.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -93,9 +95,15 @@
             <div class="social">
               <h4>Social</h4>
                 <div class="social-icons">
-                  <a href="https://www.facebook.com/yoursite" target="_blank"></a>
-                  <a href="https://www.twitter.com/yoursite" target="_blank"></a>
-                  <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                  <p>
+                    <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                  </p>
+                  <p>
+                      <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-twitter"></i></a>
+                  </p>
+                  <p>
+                      <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  </p>
                 </div>
             </div>
           </div> <!--end of footer-content-->
