--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <!--place font-awesome link here-->
+  <script src="https://kit.fontawesome.com/ecf0052709.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -69,32 +71,32 @@
       <div class="features-feature-items">
       <article>
           <p class="fontawesome-icon">
-          <i class="image-icon"></i></p>
+          <i class="fas fa-campground"></i></p>
           <p class="features-item-description">Located in a peaceful bungalow outside the Lake Geneva, Wisconsin.</p>
         </article>
         <article>
           <p class="fontawesome-icon">
-          <i class="image-icon"></i></p>
+          <i class="fas fa-bed"></i></p>
           <p class="features-item-description">12 Private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
         </article>
         <article>
           <p class="fontawesome-icon">
-            <i class="image-icon"></i></p>
+            <i class="fas fa-utensils"></i></p>
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
           <p class="fontawesome-icon">
-          <i class="image-icon"></i></p>
+          <i class="fas fa-shoe-prints"></i></p>
           <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
         </article>
         <article>
           <p class="fontawesome-icon">
-          <i class="image-icon"></i></p>
+          <i class="fas fa-smile"></i></p>
           <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
         </article>
         <article>
           <p class="fontawesome-icon">
-          <i class="image-icon"></i></p>
+          <i class="fas fa-wifi"></i></p>
           <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
       </div>
@@ -133,9 +135,15 @@
             <div class="social">
               <h4>Social</h4>
                 <div class="social-icons">
-                  <a href="https://www.facebook.com/yoursite" target="_blank"></a>
-                  <a href="https://www.twitter.com/yoursite" target="_blank"></a>
-                  <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+                  <p>
+                    <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                  </p>
+                  <p>
+                      <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-twitter"></i></a>
+                  </p>
+                  <p>
+                      <a href="https://www.facebook.com/skillcrush/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  </p>
                 </div>
             </div>
           </div> <!--end of footer-content-->
